--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -798,7 +798,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1467,7 +1467,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1979,7 +1979,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2378,7 +2378,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2885,7 +2885,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3405,7 +3405,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #131313;
+  background-color: #ffffff;
 }
 .cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
