--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1120,47 +1120,48 @@ section.lazy-placeholder:after {
 .cid-rOTbRP3tQZ .card-title {
   color: #232323;
 }
-.cid-rOTL90ghQE {
-  padding-top: 45px;
-  padding-bottom: 45px;
+.cid-rOYsaDCXX8 {
+  padding-top: 30px;
+  padding-bottom: 60px;
   background-color: #131313;
 }
-.cid-rOTL90ghQE h4 {
-  text-align: left;
-  font-weight: 500;
+.cid-rOYsaDCXX8 .card-box {
+  padding: 0 2rem;
 }
-.cid-rOTL90ghQE p {
-  color: #767676;
-  text-align: left;
+.cid-rOYsaDCXX8 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rOYsaDCXX8 .mbr-section-btn a {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-rOTL90ghQE .card-img {
+.cid-rOYsaDCXX8 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
   text-align: left;
-  -webkit-flex: 1 0 auto;
-  flex: 1 0 auto;
-  width: auto;
+  padding-top: 2rem;
 }
-.cid-rOTL90ghQE .card-img span {
-  font-size: 72px;
-  color: #ff3366;
+.cid-rOYsaDCXX8 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
 }
-.cid-rOTL90ghQE .card-box {
-  padding-left: 1rem;
-  word-break: break-word;
-  width: 100%;
+.cid-rOYsaDCXX8 .mbr-text {
+  color: #cc2952;
 }
-@media (max-width: 991px) {
-  .cid-rOTL90ghQE .card-img {
-    text-align: left;
-    padding-bottom: 0.75rem;
-  }
-  .cid-rOTL90ghQE .card-box {
-    padding-left: 0;
-  }
+.cid-rOYsaDCXX8 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #efefef;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
 }
-.cid-rOTL90ghQE .card-title,
-.cid-rOTL90ghQE .card-img {
-  color: #ffffff;
+.cid-rOYsaDCXX8 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rOYsaDCXX8 .card-title {
+  color: #232323;
 }
 .cid-rOTRZH2AbY {
   padding-top: 90px;
