--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -631,12 +631,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -727,7 +727,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1301,12 +1301,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -1397,7 +1397,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1869,12 +1869,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -1965,7 +1965,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2268,12 +2268,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -2364,7 +2364,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3030,12 +3030,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -3126,7 +3126,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3550,12 +3550,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #ff3366;
+  background: #131313;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #ff3366;
+  background: #131313;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -3646,7 +3646,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #ff3366;
+  background: #131313;
   display: none;
   position: absolute;
   min-width: 5rem;
