create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -631,12 +631,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #131313;
+  background: #ff3366;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #131313;
+  background: #ff3366;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -727,7 +727,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #131313;
+  background: #ff3366;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1301,12 +1301,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #131313;
+  background: #ff3366;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #131313;
+  background: #ff3366;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -1397,7 +1397,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #131313;
+  background: #ff3366;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1869,12 +1869,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #131313;
+  background: #ff3366;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #131313;
+  background: #ff3366;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -1965,7 +1965,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #131313;
+  background: #ff3366;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2800,69 +2800,6 @@ section.lazy-placeholder:after {
   color: #cccccc;
   text-align: center;
 }
-.cid-rOZrJDc7s9 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #131313;
-}
-.cid-rOZrJDc7s9 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-rOZrJDc7s9 p {
-  color: #767676;
-  margin: 0;
-}
-.cid-rOZrJDc7s9 .card-box {
-  background-color: #ffffff;
-  background-color: transparent;
-}
-.cid-rOZrJDc7s9 .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rOZrJDc7s9 .card-wrapper {
-  position: relative;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rOZrJDc7s9 .wrapper {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.cid-rOZrJDc7s9 .border_wrapper {
-  border-left: 1px solid #848282;
-  padding-left: 2rem;
-}
-@media (max-width: 991px) {
-  .cid-rOZrJDc7s9 .border_wrapper {
-    border-left: none;
-    padding-left: 0;
-  }
-  .cid-rOZrJDc7s9 .mbr-section-btn a {
-    padding: 1rem 2rem;
-  }
-  .cid-rOZrJDc7s9 .mbr-figure {
-    padding-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-rOZrJDc7s9 .wrapper {
-    align-items: center;
-    text-align: center;
-  }
-  .cid-rOZrJDc7s9 .col-left h4 {
-    padding-top: 1rem;
-  }
-  .cid-rOZrJDc7s9 p.col-right {
-    padding-top: 1rem;
-  }
-}
-.cid-rOZrJDc7s9 .card-title {
-  color: #ffffff;
-}
 .cid-rOZyZkmjnR {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -3043,12 +2980,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #131313;
+  background: #ff3366;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #131313;
+  background: #ff3366;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -3139,7 +3076,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #131313;
+  background: #ff3366;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3563,12 +3500,12 @@ section.lazy-placeholder:after {
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
-  background: #131313;
+  background: #ff3366;
   transition: none;
   min-height: 77px;
 }
 .cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
-  background: #131313;
+  background: #ff3366;
 }
 .cid-rOYcTy2LbV a {
   font-style: normal;
@@ -3659,7 +3596,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rOYcTy2LbV .dropdown .dropdown-menu {
-  background: #131313;
+  background: #ff3366;
   display: none;
   position: absolute;
   min-width: 5rem;
