create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1321,9 +1321,9 @@ section.lazy-placeholder:after {
   max-width: 100%;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -1645,9 +1645,9 @@ section.lazy-placeholder:after {
   background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -2690,9 +2690,9 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -3391,9 +3391,9 @@ section.lazy-placeholder:after {
   color: #cc2952;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -3976,9 +3976,9 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -4574,9 +4574,9 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -5132,9 +5132,9 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rPJyv7S1OG {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #131313;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
